add second name and web

--- a/index.html
+++ b/index.html
@@ -97,8 +97,8 @@
                                             </div>
                                             <div class="col-sm-6 col-md-7">
                                                 <div class="about-info">
-                                                    <p><span class="title-s">Name: </span> <span>Gideon Okuro</span></p>
-                                                    <p><span class="title-s">Profile: </span> <span>Android developer</span></p>
+                                                    <p><span class="title-s">Name: </span> <span>Gideon Ollonde Okuro</span></p>
+                                                    <p><span class="title-s">Profile: </span> <span>Android & Web developer</span></p>
                                                     <p><span class="title-s">Email: </span> <span>gideonollonde@gmail.com</span></p>
                                                     <p><span class="title-s">Phone: </span> <span>(+254) 719-240-756</span></p>
                                                 </div>
